--- a/conda-envs/preprocessing.yml
+++ b/conda-envs/preprocessing.yml
@@ -1,11 +1,12 @@
 name: metabiome-preprocessing
 channels:
   - bioconda
+  - conda-forge
   - defaults
 dependencies:
-  - trimmomatic=0.*
-  - bowtie2=2.*
+  - trimmomatic=0.39
+  - bowtie2=2.3
   - rename=1.601
-  - entrez-direct=11.0
-  - fastqc=0.11.8
+  - entrez-direct=13.9
+  - fastqc=0.11
   - multiqc=1.6
